# fdeta

./: .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  average_filter_dihedrals.py  cleancode.sh  index.md  setup.cfg  setup.py
.github/: CONTRIBUTING.md
devtools/: README.md
devtools/conda-envs/: test_env.yaml
devtools/travis-ci/: before_install.sh
docs/: Makefile  README.md  conf.py  index.rst  make.bat
fdeta/: __init__.py  _version.py  analysis.py  average_zmat.py  base_trajectory.py  cube.py  dft.py  fdeta.py  fragments.py  ic_averager.py  internal_coordinates.npz_angles.txt  internal_coordinates.npz_bonds.txt  internal_coordinates.npz_dihedrals.txt  kabsch.py  mdft_tools.py  mdtrajectory.py  mdtrajectory_new.py  radial_distributions.py  traj_tools.py  uelement.py  units.py  vcoulomb.cpp  xmeans.py
fdeta/data/: ElectrostaticADF  box_grid.txt  cc-pvdz-segopt.nwchem  he_charges.txt  he_test_0.xyz  he_test_1.xyz  he_traj.txt  rhoA_ref.txt  rhoB_ref.txt  test_0.pqr  test_1.pqr  test_charges.txt  test_charges_heteroatoms.txt  test_guv.txt  test_traj.fde  test_traj_heteroatoms.fde  test_traj_large.xyz  traj_acetone_w2.fde  vxct_nad.npz
fdeta/fdetmd/: __init__.py  auxfns.cpp  cgrid_tools.cpp  grid_tools.py  interface.py  interpolate.py  mdinterface.py  pcf.py  vcoulomb.cpp
fdeta/mdft/: __init__.py  io_tools.py
fdeta/tests/: test_basic.py  test_cube.py  test_dft.py  test_fdeta.py  test_fns.py  test_fragments.py  test_grid_tools.py  test_interpolate.py  test_mdft_tools.py  test_radial.py  (+4 more)
tools/: codecleaner.py
(+1 files in other folders)
